@@ -174,6 +174,7 @@
     default=no
 [/advanced_preference]
 
+#ifndef APPLE
 [advanced_preference]
     field=color_cursors
     name= _ "Show color cursors"
@@ -181,6 +182,7 @@
     type=boolean
     default=no
 [/advanced_preference]
+#endif
 
 #ifdef __UNUSED__
 [advanced_preference]
